syntax="proto3";
package clusterV1;
option go_package="github.com/sjy-dv/vemoo/proto/gen/v1/clusterV1";

import "core.proto";


service NodesCoordinator {
    rpc ListNodes(coreV1.EmptyMessage) returns (stream Node);
    rpc AddNode(Node) returns (stream Node);
    rpc RemoveNode(Node) returns (coreV1.EmptyMessage);
    rpc LoadInfo(coreV1.EmptyMessage) returns (NodeMetrics);
}

message Node {
    uint64 id = 1;
    string address = 2;
}

//cpu load balancing 1min -> 5min -> 15min check
message NodeMetrics {
    uint64 uptime = 1;
    double cpu_load1 = 2;
    double cpu_load5 = 3;
    double cpu_load15 = 4;
    uint64 mem_total = 5;
    uint64 mem_available = 6;
    uint64 mem_used = 7;
    uint64 mem_free = 8;
    double mem_used_percent = 9;
}